--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://www.annatto.se/"
 languageCode = "sv-se"
-title = "annatto - Färgstark webbyrå"
+title = "Annatto - Färgstark webbyrå"
 theme = "hugo-theme-tailwindcss-starter"
 
 enableRobotsTXT = true
